# zero2prod

./: Cargo.toml  configuration.yaml
.github/workflows/: ci.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: greet.rs  subscriptions.rs
tests/: health_check.rs
